@@ -1,0 +1,2 @@
+SOURCES = testtable1.cpp
+QT += widgets
