@@ -1,0 +1,2 @@
+SOURCES = testtree.cpp
+QT += widgets
